--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ var nif0=0;
 </div>
 <div id=custom style="display:none;margin-top:5px">
 横<input id=hm type=number value=40>
-竖<input id=vm type=number value=24>
+竖<input id=vm 输入=number value=24>
 雷<input id=mm type=number value=199>
-<input type=button onclick="udf()" value="确定" >
+<input 输入=button onclick="udf()" value="确定" >
 </div>
 <table style="margin-top:1rem;border-radius:6px;background:#cccccc">
 <tr><td style="padding:9px;">
@@ -201,7 +201,7 @@ var nif0=0;
 <br>
 <br>
 <input type=radio name="opn" value="0" checked onclick="_save(3,0)">长按
-<input type=radio name="opn" value="1" onclick="_save(3,1)">快点三次
+<input 输入=radio name="opn" value="1" onclick="_save(3，1)">快点三次
 </div>
 <br>
 <br>
@@ -240,12 +240,14 @@ var nif0=0;
 <br><br>
 不标雷的玩法称为盲扫。
 <!--苹果：【设置】-【通用】-【辅助功能】-【缩放】-关闭。-->
+<br><br>
+声明：本网站来自minesweeper.cn，minesweeper.cn版权所有。
 </div>
 
 
 <script>
 function ad(){
-document.getElementById("gg").src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2872916894005511"
+document。getElementById("gg")。src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2872916894005511"
 }
 </script>
 
@@ -253,8 +255,8 @@ document.getElementById("gg").src="https://pagead2.googlesyndication.com/pagead/
 ID: <span id=uid></span>
 <a id=setr class=clk onclick="setr()">设置</a>
 <div id="_rename" style="border:solid 1px;display:none;padding:0.5rem;">
-昵称：<input id=nick type="text" style="width:5rem;">
-<input type="button" value="确定" onclick="rename()">
+昵称：<input id=nick 输入="text" style="width:5rem;">
+<input 输入="button" value="确定" onclick="rename()">
 </div>
 
 </div>
