--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 
 body{margin:0px;}
 
+@font-face {
+    font-family: 'Zhuzi';
+    src: url('https://file.guangzhoueven.dpdns.org/Fonts/Zhuzi.ttf');
+    font-display: swap;
+}
+body,
+.bfont {
+    font-family: 'Zhuzi' !important;
+}
+	
 input{height:1.5rem;width:3.8rem;}
 
 #face{
