--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
 <meta name="viewport" content="initial-scale=1,maximum-scale=1, user-scalable=0">
 <meta name="keywords" content="扫雷, minesweeper">
 <meta name="description" content="本站提供了经典扫雷游戏，并略作改进，在电脑或手机上打开网页就可以玩，无需下载安装。增加了满屏级别，自适应屏幕大小。成绩榜实时显示大家的在线扫雷成绩。">
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="57x57" href="resources/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="resources/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="resources/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="resources/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="resources/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="resources/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="resources/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="resources/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="resources/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="resources/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/svg+xml" href="resources/icons/favicon.svg">
+    <link rel="manifest" href="manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="resources/icons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
 <title>扫雷游戏网页版 - Minesweeper</title>
 
 <script src="gfs1.js"></script>
