--- a/about.htm
+++ b/about.htm
@@ -6,7 +6,7 @@
 <title>关于本站</title>
 
 <style>
-body{background:#f7f7f0;}
+body{background-color:#f7f7f0;background-image:url('https://file.guangzhoueven.dpdns.org/beautiful-light.svg');background-size:cover;background-position:center;background-repeat:no-repeat;}
 table{border-collapse:collapse;cursor:default;}
 #foo{border-top:solid 1px #cccccc;padding-top:2rem;margin-top:6rem;width:90%;text-align:center}
 </style>
