--- a/guest/index.html
+++ b/guest/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="initial-scale=1">
 
 <style>
-body{background:#f7f7f0;}
+body{background-color:#f7f7f0;background-image:url('https://file.guangzhoueven.dpdns.org/beautiful-light.svg');background-size:cover;background-position:center;background-repeat:no-repeat;}
 
 
 .sid{color:#f7f7f0;margin-bottom:1rem;}
