--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ var nif0=0;
 
 </head>  
 
-<body  bgcolor="#f7f7f0"  onload="night();start();setTimeout(ad,500);">
+<body  style="background-color:#f7f7f0;background-image:url('https://file.guangzhoueven.dpdns.org/beautiful-light.svg');background-size:cover;background-position:center;background-repeat:no-repeat;"  onload="night();start();setTimeout(ad,500);">
 
 
 <center>
