--- a/scores.htm
+++ b/scores.htm
@@ -4,7 +4,7 @@
 <meta name="viewport" content="initial-scale=1">
 
 <style>
-body{background:#f7f7f0;line-height:1.8rem;}
+body{background-color:#f7f7f0;background-image:url('https://file.guangzhoueven.dpdns.org/beautiful-light.svg');background-size:cover;background-position:center;background-repeat:no-repeat;line-height:1.8rem;}
 .flag{width:1rem;display:inline-block}
 .nick{font-family:KaiTi}
 </style>
