--- a/guest/fill.htm
+++ b/guest/fill.htm
@@ -5,7 +5,7 @@
 
 
 <style>
-body{background:#f7f7f0;}
+body{background-color:#f7f7f0;background-image:url('https://file.guangzhoueven.dpdns.org/beautiful-light.svg');background-size:cover;background-position:center;background-repeat:no-repeat;}
 textarea{font-size:1rem;}
 </style>
 <title>发言</title>
