--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@ var nif0=0;
 &nbsp;
 <a class=clk onclick="_123(5)">自定义</a>
 </div>
+<hr><a href="/bug">Bug</a>
+<hr><a href="/game">Game</a>
+<hr>
 <div id=custom style="display:none;margin-top:5px">
 横<input id=hm type=number value=40>
 竖<input id=vm 输入=number value=24>
