--- a/index.html
+++ b/index.html
@@ -105,9 +105,7 @@ var nif0=0;
 &nbsp;
 <a class=clk onclick="_123(5)">自定义</a>
 </div>
-<hr><a href="/bug">Bug</a>
-<hr><a href="/game">Game</a>
-<hr>
+
 <div id=custom style="display:none;margin-top:5px">
 横<input id=hm type=number value=40>
 竖<input id=vm 输入=number value=24>
@@ -138,7 +136,11 @@ var nif0=0;
 <a id=ss href="scores.htm" >成绩榜</a>
 </div>
 
-
+<hr>
+<a href="/bug">Bug</a>
+<hr>
+<a href="/game">Game</a>
+<hr>
 
 <div style="width:90%;text-align:left;margin-top:2.5rem;">
 <span style="vertical-align:middle">自动标雷</span><input type=checkbox checked id=af onclick="saf()" >
