--- a/game/backup/index.html
+++ b/game/backup/index.html
@@ -84,7 +84,7 @@ var nif0=0;
 
 </head>  
 
-<body  style="background-color:#f7f7f0;background-image:url('https://file.guangzhoueven.dpdns.org/beautiful-light.svg');background-size:cover;background-position:center;background-repeat:no-repeat;"  onload="night();start();setTimeout(ad,500);">
+<body  bgcolor="#f7f7f0"  onload="night();start();setTimeout(ad,500);">
 
 
 <center>
@@ -118,9 +118,7 @@ var nif0=0;
 <tr>
 <td width=50%><canvas id="rm" height=23 width=39></canvas>
 </td>
-<td align=center onmouseup="_45()" style="padding:0 8px 0 8px"><img id="face"></td>
-<td align=center style="padding:0 8px 0 8px"><button id="undoBtn" onclick="undoMove()" style="display:none;">撤销</button></td>
-<td align=center style="padding:0 8px 0 8px"><button id="clearFlagsBtn" onclick="clearAllFlags()">取消标记</button></td>
+<td align=center onmouseup="_45()" style="padding:0 8px 0 8px"><img id="face">
 <td width=50% align=right>
 <!--span id=sff style="margin-right:3px;line-height:18px;vertical-align:top"></span--><canvas id="es" height=23 width=39></canvas></td>
 </table>
